Add InfoDialog to display information about clicked on memory data, stack or register. Symbol table page import table is displayed in different colors. Auto-complete when visit type in struct window. HexDump supports displaying non-English characters in ASCII mode.

--- a/src/gui/Src/Gui/LineEditDialog.ui
+++ b/src/gui/Src/Gui/LineEditDialog.ui
@@ -21,7 +21,7 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QLineEdit" name="textEdit"/>
+      <widget class="AutoCompleteEdit" name="textEdit"/>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
