--- a/src/gui/Src/Gui/InfoDialog.ui
+++ b/src/gui/Src/Gui/InfoDialog.ui
@@ -305,7 +305,7 @@
        </widget>
       </item>
       <item row="5" column="0">
-       <widget class="QLabel" name="label_4">
+       <widget class="QLabel" name="label_int">
         <property name="text">
          <string>Int:</string>
         </property>
