--- a/src/gui/Src/Gui/SettingsDialog.ui
+++ b/src/gui/Src/Gui/SettingsDialog.ui
@@ -33,7 +33,7 @@
       <bool>true</bool>
      </property>
      <property name="currentIndex">
-      <number>5</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabEvents">
       <attribute name="title">
@@ -293,6 +293,13 @@
         <widget class="QCheckBox" name="chkSkipInt3Stepping">
          <property name="text">
           <string>Skip INT3 stepping</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="chkBreakWhenCalcConditionsFails">
+         <property name="text">
+          <string>Break When Calc Conditions fails</string>
          </property>
         </widget>
        </item>
